Fixed table' scrollbars

--- a/src/components/table/table.less
+++ b/src/components/table/table.less
@@ -8,6 +8,10 @@
     padding: 0px;
 
     > thead {
+      position: sticky;
+      position: -webkit-sticky;
+      z-index: 5;
+      top: 0px;
       > tr {
         height: 2rem;
         &.bbn-table-tr-titles,
